--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- React components will be rendered to this root div as children (see index.js) -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
